removing irrelevant content

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -86,7 +86,7 @@
 %%% ------------------------------------------------------------
 %%% BEGIN DOCUMENT
 %%% ------------------------------------------------------------
-%\begin{document}
+\begin{document}
 %\begin{wrapfigure}{l}{0.3\textwidth}
   %\vspace*{-8em}
     %\includegraphics[width=0.25\textwidth]{photo}
@@ -99,14 +99,11 @@
 
 %%% Personal details
 %%% ------------------------------------------------------------
-\NewPart{Personal details}{}
+\NewPart{Contact}{}
 
-\PersonalEntry{Date of Birth}{August 27, 1985}
-\PersonalEntry{Address}{2A Mejerigatan}
-\PersonalEntry{}{41276, Gothenburg, Sweden}
-\PersonalEntry{Phone}{0046 768947275}
-\PersonalEntry{Mail}{nagat@student.chalmers.se}
-%\PersonalEntry{Mail}{\url{nagat@student.chalmers.se}}
+\PersonalEntry{Phone}{+46 768947275}
+\PersonalEntry{Mail}{attilanagy85@gmail.com}
+\PersonalEntry{GitHub}{https://github.com/NagyAttila}
 
 %%% Education
 %%% ------------------------------------------------------------
