--- a/CV_Attila_Nagy__Udacity.tex
+++ b/CV_Attila_Nagy__Udacity.tex
@@ -89,13 +89,11 @@
 
 %%% Personal details
 %%% ------------------------------------------------------------
-\NewPart{Personal details}{}
+\NewPart{Contact}{}
 
-\PersonalEntry{Date of Birth}{August 27, 1985}
-\PersonalEntry{Address}{Nordanvindsgatan 4A}
-\PersonalEntry{}{41717, Gothenburg, Sweden}
 \PersonalEntry{Phone}{+46 768947275}
 \PersonalEntry{Mail}{attilanagy85@gmail.com}
+\PersonalEntry{GitHub}{https://github.com/NagyAttila}
 
 %%% Education
 %%% ------------------------------------------------------------
