--- a/CV_Attila_Nagy_simple.tex
+++ b/CV_Attila_Nagy_simple.tex
@@ -89,11 +89,8 @@
 
 %%% Personal details
 %%% ------------------------------------------------------------
-\NewPart{Personal details}{}
+\NewPart{Contact}{}
 
-\PersonalEntry{Date of Birth}{August 27, 1985}
-\PersonalEntry{Address}{Nordanvindsgatan 4A}
-\PersonalEntry{}{41717, Gothenburg, Sweden}
 \PersonalEntry{Phone}{+46 768947275}
 \PersonalEntry{Mail}{attilanagy85@gmail.com}
 \PersonalEntry{GitHub}{https://github.com/NagyAttila}
@@ -134,11 +131,11 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \NewPart{Work}{}
 \WorkEntry{Volvo Cars Corporation}{07/2014 -- 07/2016}{Self-Driving Car Engineering, Sweden, Full-time}
 
-\SkillsEntry{Programming:}{Matlab, Simulink, Python, C++}
-
 \SkillsEntry{Roles:}{Self-Driving Car Developer, Unit Tester}
 
-\SkillsEntry{Applications:}{Data-Analysis, Sensor-Fusion, Mapping, Logging}
+\SkillsEntry{Programming:}{Matlab, Simulink, Python, C++}
+
+\SkillsEntry{Applications:}{Active-Safety, Data-Analysis, Sensor-Fusion, Mapping, Logging}
 
 \SkillsEntry{Principles:}{Scrum, Agile}
 
@@ -157,13 +154,13 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \SkillsEntry{Principles:}{Scrum, Agile, TDD}
 
 \NewPart{Interest}{}
-\SkillsEntry{Technical:}{functional programming}
-\SkillsEntry{}{machine learning}
+\SkillsEntry{Technical:}{machine learning}
 \SkillsEntry{}{free/open-source software}
+\SkillsEntry{}{functional programming}
 
 \sepspace
 \SkillsEntry{Sports:}{rock climbing}
-\SkillsEntry{}{slacklining}
 \SkillsEntry{}{acroyoga}
+\SkillsEntry{}{slacklining}
 
 \end{document}
