adding RMBLStrip to CV

--- a/CV_Attila_Nagy_simple.tex
+++ b/CV_Attila_Nagy_simple.tex
@@ -104,8 +104,9 @@
  Assigment 2: Image Classification by Convolutional Neural Network\\
  Assigment 3: TV script generation by Recurrent Neural Network\\
  Assigment 4: Language-translation by Recurrent Neural Network\\
- Assigment 5: Generative Adversarial Networks (coming in May)\\
- Source-code: https://github.com/NagyAttila/Udacity\_DLND\_Assigments }
+ Assigment 5: Face image generation by Generative Adversarial Networks \\
+ Source-code: https://github.com/NagyAttila/Udacity\_DLND\_Assigments \\
+ Syllabus: https://www.udacity.com/course/deep-learning-nanodegree--nd101 }
 \sepspace
 
 
@@ -129,6 +130,19 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 
 \clearpage
 \NewPart{Work}{}
+
+\WorkEntry{RMBLStrip}{09/2017 -- Currently}{Software Architect and Developer, Sweden, Full-time}
+
+\SkillsEntry{Roles:}{SW Architect, Algorithm Developer}
+
+\SkillsEntry{Programming:}{Matlab, Python}
+
+\SkillsEntry{Applications:}{Adaptive Roof-Deflector, Data-Analysis}
+
+\SkillsEntry{Principles:}{Scrum, Agile}
+
+\sepspace
+
 \WorkEntry{Volvo Cars Corporation}{07/2014 -- 07/2016}{Self-Driving Car Engineering, Sweden, Full-time}
 
 \SkillsEntry{Roles:}{Self-Driving Car Developer, Unit Tester}
@@ -162,5 +176,10 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \SkillsEntry{Sports:}{rock climbing}
 \SkillsEntry{}{acroyoga}
 \SkillsEntry{}{slacklining}
+
+\sepspace
+\SkillsEntry{Other:}{fermentation}
+\SkillsEntry{}{politics}
+\SkillsEntry{}{meditation}
 
 \end{document}
