--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -91,8 +91,8 @@
 %%% ------------------------------------------------------------
 \NewPart{Contact}{}
 
-\PersonalEntry{Phone}{+46 768947275}
-\PersonalEntry{Mail}{attilanagy85@gmail.com}
+\PersonalEntry{Phone}{+46 790747275}
+\PersonalEntry{Mail}{attilanagy85 at gmail}
 \PersonalEntry{GitHub}{https://github.com/NagyAttila}
 
 %%% Education
