removing unrelevant parts

--- a/cover_letters/Chalmers/phd/main.tex
+++ b/cover_letters/Chalmers/phd/main.tex
@@ -1,4 +1,4 @@
-\title{A Very Simple \LaTeXe{} Template}
+\title{Cover Letter for Chalmers PhD application}
 \author{Attila Nagy}
 \date{\today}
 
@@ -7,9 +7,8 @@
 \begin{document}
 \maketitle
 
-\begin{abstract}
-
-\end{abstract}
+%\begin{abstract}
+%\end{abstract}
 
 \section*{Introduction and Qualications}
 My journey in the world of machine learning and artificial intelligence started during my Computer Science Master's program at the Gothenburg University when I decided to take Artificial Intelligence course. On this course, I had the chance to be part of a team of 3 who developed a solution for a sentiment analyse of movie reviews and another solution for SHRDLite, a simpler version of SHRDLU\cite{win1970shrdlu}, planner using GF for naturel language processing. One of the supervisor for this course was Devdatt Dubhashi.
