adding new section to cover letter

--- a/cover_letters/Chalmers/phd/main.bib
+++ b/cover_letters/Chalmers/phd/main.bib
@@ -12,4 +12,13 @@
     year = {1971}
 }
 
+@BOOK {probabilistic_programming,
+    author    = "Cameron Davidson-Pilon",
+    title     = "Bayesian Methods for Hackers",
+    publisher = "Addison-Wesley Data \& Analytics",
+    year      = "2015",
+    edition   = "first",
+    crossref  = "probabilistic_programming",
+    note      = "https://github.com/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers"
+}
 
