final version of the cover letter

--- a/cover_letters/Chalmers/phd/main.bib
+++ b/cover_letters/Chalmers/phd/main.bib
@@ -1,3 +1,13 @@
+@Book{gf,
+  author = {Aarne Ranta},
+  title =  {{Grammatical Framework:
+             Programming with Multilingual Grammars}},
+  publisher = {{CSLI Publications}},
+  year = {2011},
+  address = "Stanford",
+  note = "ISBN-10: 1-57586-626-9 (Paper), 1-57586-627-7 (Cloth)"
+}
+
 @phdthesis{win1970shrdlu,
     author = {Winograd, Terry},
     citeulike-article-id = {2192782},
@@ -21,4 +31,5 @@
     crossref  = "probabilistic_programming",
     note      = "https://github.com/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers"
 }
+
 
