adding some extra interest entries

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -170,6 +170,7 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \NewPart{Interest}{}
 \SkillsEntry{Technical:}{machine learning}
 \SkillsEntry{}{free/open-source software}
+\SkillsEntry{}{blockchain technology}
 \SkillsEntry{}{functional programming}
 
 \sepspace
@@ -178,7 +179,7 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \SkillsEntry{}{slacklining}
 
 \sepspace
-\SkillsEntry{Other:}{fermentation}
+\SkillsEntry{Others:}{fermentation}
 \SkillsEntry{}{politics}
 \SkillsEntry{}{meditation}
 
