renaming main to cover_letter

--- a/cover_letters/Chalmers/phd/cover_letter.tex
+++ b/cover_letters/Chalmers/phd/cover_letter.tex
@@ -45,7 +45,7 @@ Milad is my current team leader and one of the main share-holders at RMBLStrip. 
 Joakim was the team leader of the Mapping and Localization team, the team that I was part of at Volvo Cars during my 2 years of employment. Currently, he is having a similar role at Zenuity working with localization and road estimation. Therefore, I consider him as the most competent person to evaluate my contribution to the team's achievements during those two years.
 
 \bibliographystyle{abbrv}
-\bibliography{main}
+\bibliography{references}
 
 \end{document}
 
