--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -70,6 +70,12 @@
 		\normalsize \par
     }
 
+\newcommand{\ReferenceEntry}[1]{
+        \large
+		\noindent \textbf{#1} \par
+		\normalsize \par
+    }
+
 \newcommand{\WorkEntry}[4]{						% Same as \EducationEntry
 		\noindent \textbf{#1} \hfill 					% Jobname
 		\colorbox{Black}{\color{White}#2} \par		% Duration
@@ -182,5 +188,16 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \SkillsEntry{Others:}{fermentation}
 \SkillsEntry{}{politics}
 \SkillsEntry{}{meditation}
+
+\NewPart{References}{}
+\ReferenceEntry{Milad Pouyamehr}{}{}
+\SkillsEntry{Phone:}{+46 123}
+\SkillsEntry{From:}{RMBLStrip}
+\sepspace
+
+\ReferenceEntry{Joakim Lin-S\"orstedt}
+\SkillsEntry{Phone:}{+46 123}
+\SkillsEntry{From:}{Volvo Cars Corporation}
+\sepspace
 
 \end{document}
