fixing review findings

--- a/cover_letters/Chalmers/phd/references.bib
+++ b/cover_letters/Chalmers/phd/references.bib
@@ -27,8 +27,7 @@
     title     = "Bayesian Methods for Hackers",
     publisher = "Addison-Wesley Data \& Analytics",
     year      = "2015",
-    edition   = "first",
-    crossref  = "probabilistic_programming",
+    edition   = "1st",
     note      = "https://github.com/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers"
 }
 
