removing fermentation as interest

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -185,8 +185,7 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \SkillsEntry{}{slacklining}
 
 \sepspace
-\SkillsEntry{Others:}{fermentation}
-\SkillsEntry{}{politics}
+\SkillsEntry{Others:}{politics}
 \SkillsEntry{}{meditation}
 
 \NewPart{References}{}
