renaming cover letter to personal letter

--- a/cover_letters/Chalmers/phd/cover_letter.tex
+++ b/cover_letters/Chalmers/phd/cover_letter.tex
@@ -1,4 +1,4 @@
-\title{Cover Letter for Chalmers PhD application}
+\title{Personal Letter for Chalmers PhD application}
 \author{Attila Nagy}
 \date{\today}
 
