correcting some wordings

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -121,7 +121,7 @@
   Thesis' Title: Energy Efficient, High-speed Communication in Wireless Sensor Networks\\
   Thesis' Keywords: Opportunistic Routing, Bulk-transfer, TinyOS, nesC\\
   Student Project: Carolo Cup, Germany, self-driving miniature cars, team leader\\
-  Research Project: Smart-meter classification and disaggregation using SVM}
+  Research Project: Power consumtion disaggregation and clsassification with SVM}
 \sepspace
 
 \EducationEntry{ERASMUS Scholarship}{09/2008 -- 01/2009}
@@ -163,7 +163,7 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 
 \WorkEntry{Nokia Siemens Networks}{08/2009 -- 08/2012}{Software Engineer, Hungary, Full-time}
 
-\SkillsEntry{Roles:}{Scrum Master, Functional Developer, Unit Tester, Maintenance}
+\SkillsEntry{Roles:}{Scrum Master, Functional Developer, Unit Tester, DevOps}
 
 \SkillsEntry{Programming:}{C/C++, Python, Perl, BASH, TNSDL, LDAP}
 
