--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -137,11 +137,11 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \clearpage
 \NewPart{Work}{}
 
-\WorkEntry{RMBLStrip}{09/2017 -- Currently}{Software Architect and Developer, Sweden, Full-time}
+\WorkEntry{RumbleStrip}{09/2017 -- Currently}{Software Architect and Developer, Sweden, Full-time}
 
 \SkillsEntry{Roles:}{SW Architect, Algorithm Developer}
 
-\SkillsEntry{Programming:}{Matlab, Python}
+\SkillsEntry{Programming:}{Python, C, Matlab}
 
 \SkillsEntry{Applications:}{Adaptive Roof-Deflector, Data-Analysis}
 
@@ -181,12 +181,13 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 
 \sepspace
 \SkillsEntry{Sports:}{rock climbing}
-\SkillsEntry{}{acroyoga}
 \SkillsEntry{}{slacklining}
+\SkillsEntry{}{acroyoga}
+\SkillsEntry{}{running}
 
 \sepspace
-\SkillsEntry{Others:}{politics}
-\SkillsEntry{}{meditation}
+\SkillsEntry{Others:}{meditation}
+\SkillsEntry{}{politics}
 
 \NewPart{References}{}
 \ReferenceEntry{Milad Pouyamehr}{}{}
