--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -97,7 +97,7 @@
 %%% ------------------------------------------------------------
 \NewPart{Contact}{}
 
-\PersonalEntry{Phone}{+46 790747275}
+\PersonalEntry{Phone}{+46 763005175}
 \PersonalEntry{Mail}{attilanagy85 at gmail}
 \PersonalEntry{GitHub}{https://github.com/NagyAttila}
 
@@ -137,7 +137,7 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \clearpage
 \NewPart{Work}{}
 
-\WorkEntry{RumbleStrip}{09/2017 -- Currently}{Software Architect and Developer, Sweden, Full-time}
+\WorkEntry{RumbleStrip}{09/2017 -- 10/2019}{Software Architect and Developer, Sweden, Full-time}
 
 \SkillsEntry{Roles:}{SW Architect, Algorithm Developer}
 
