adding HomePage to Contacts

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -98,8 +98,9 @@
 \NewPart{Contact}{}
 
 \PersonalEntry{Phone}{+46 763005175}
-\PersonalEntry{Mail}{attilanagy85 at gmail}
+\PersonalEntry{Mail}{contact@nagyattila.tech}
 \PersonalEntry{GitHub}{https://github.com/NagyAttila}
+\PersonalEntry{HomePage}{https://nagyattila.tech}
 
 %%% Education
 %%% ------------------------------------------------------------
