updating Sports section

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -183,8 +183,8 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \sepspace
 \SkillsEntry{Sports:}{rock climbing}
 \SkillsEntry{}{slacklining}
-\SkillsEntry{}{acroyoga}
 \SkillsEntry{}{running}
+\SkillsEntry{}{yoga}
 
 \sepspace
 \SkillsEntry{Others:}{meditation}
