--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -97,10 +97,10 @@
 %%% ------------------------------------------------------------
 \NewPart{Contact}{}
 
-\PersonalEntry{Phone}{+46 763005175}
-\PersonalEntry{Mail}{contact@nagyattila.tech}
+\PersonalEntry{Phone}{+46 708499543}
+\PersonalEntry{Mail}{attilanagy85@gmail.com}
 \PersonalEntry{GitHub}{https://github.com/NagyAttila}
-\PersonalEntry{HomePage}{https://nagyattila.tech}
+%\PersonalEntry{HomePage}{https://nagyattila.tech}
 
 %%% Education
 %%% ------------------------------------------------------------
@@ -138,6 +138,18 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \clearpage
 \NewPart{Work}{}
 
+\WorkEntry{HiQ, Consultant at Ericsson}{04/2020 -- Now}{Software Developer, Sweden, Full-time}
+
+\SkillsEntry{Roles:}{Functional Tester, System Tester, DevOps}
+
+\SkillsEntry{Programming:}{C++, TTCN}
+
+\SkillsEntry{Applications:}{LTE, PacketCore}
+
+\SkillsEntry{Principles:}{Scrum, Agile}
+
+\sepspace
+
 \WorkEntry{RumbleStrip}{09/2017 -- 10/2019}{Software Architect and Developer, Sweden, Full-time}
 
 \SkillsEntry{Roles:}{SW Architect, Algorithm Developer}
@@ -150,7 +162,7 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 
 \sepspace
 
-\WorkEntry{Volvo Cars Corporation}{07/2014 -- 07/2016}{Self-Driving Car Engineering, Sweden, Full-time}
+\WorkEntry{ÅF, Consultant at Volvo Cars}{07/2014 -- 07/2016}{Self-Driving Car Engineering, Sweden, Full-time}
 
 \SkillsEntry{Roles:}{Self-Driving Car Developer, Unit Tester}
 
@@ -164,7 +176,7 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 
 \WorkEntry{Nokia Siemens Networks}{08/2009 -- 08/2012}{Software Engineer, Hungary, Full-time}
 
-\SkillsEntry{Roles:}{Scrum Master, Functional Developer, Unit Tester, DevOps}
+\SkillsEntry{Roles:}{Scrum Master, Functional Tester, Unit Tester, DevOps}
 
 \SkillsEntry{Programming:}{C/C++, Python, Perl, BASH, TNSDL, LDAP}
 
@@ -190,15 +202,18 @@ Student Project: Remote-controlled miniature car via bluetooth, 8-bit Atmega mic
 \SkillsEntry{Others:}{meditation}
 \SkillsEntry{}{politics}
 
-\NewPart{References}{}
-\ReferenceEntry{Milad Pouyamehr}{}{}
-\SkillsEntry{Phone:}{+46 123}
-\SkillsEntry{From:}{RMBLStrip}
-\sepspace
 
-\ReferenceEntry{Joakim Lin-S\"orstedt}
-\SkillsEntry{Phone:}{+46 123}
-\SkillsEntry{From:}{Volvo Cars Corporation}
-\sepspace
+% \NewPart{References}{}
+% \ReferenceEntry{David Andersson}{}{}
+% \SkillsEntry{Phone:}{+46 735803819}
+% \SkillsEntry{Email:}{david.andersson@nvidia.com}
+% \SkillsEntry{From:}{Volvo Cars Corporation}
+% \sepspace
+
+% \ReferenceEntry{Joakim Lin-S\"orstedt}
+% \SkillsEntry{Phone:}{+46 723716181}
+% \SkillsEntry{Email:}{jaokim.lin-sorstedt@zenuity.com}
+% \SkillsEntry{From:}{Volvo Cars Corporation}
+% \sepspace
 
 \end{document}
