add clickable href-s

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -106,7 +106,7 @@
 
 \PersonalEntry{Phone}{+46 708499543}
 \PersonalEntry{Mail}{attilanagy85@gmail.com}
-\PersonalEntry{GitHub}{https://github.com/NagyAttila}
+\PersonalEntry{GitHub}{\href{https://github.com/NagyAttila}{https://github.com/NagyAttila}}
 %\PersonalEntry{HomePage}{https://nagyattila.tech}
 
 \NewPart{Introduction}{}
@@ -178,28 +178,37 @@ My current greatest endeavour is to start my own company and work as a free-lanc
 \NewPart{Education}{}
 
 \EducationEntry{freeCodeCamp Certificates}{01/2020 -- 03/2020}
-{https://www.freecodecamp.org/ (Click on certificate)}
-{\href{https://www.freecodecamp.org/certification/fcc7d8027bd-7ee4-4ec3-816b-87c5087dab3c/responsive-web-design}{Certificate 1: Responsive Web Design} \\
- \href{https://www.freecodecamp.org/certification/fcc7d8027bd-7ee4-4ec3-816b-87c5087dab3c/javascript-algorithms-and-data-structures}{Certificate 2: JavaScript Algorithms and Data Structures} \\
- \href{https://www.freecodecamp.org/certification/fcc7d8027bd-7ee4-4ec3-816b-87c5087dab3c/front-end-libraries}{Certificate 3: Front End Libraries}
+{\href{https://www.freecodecamp.org}{www.freecodecamp.org}}
+{Certificate 1: Responsive Web Design
+\href{https://www.freecodecamp.org/certification/fcc7d8027bd-7ee4-4ec3-816b-87c5087dab3c/responsive-web-design}{[Link]}
+\\
+Certificate 2: JavaScript Algorithms and Data Structures
+\href{https://www.freecodecamp.org/certification/fcc7d8027bd-7ee4-4ec3-816b-87c5087dab3c/javascript-algorithms-and-data-structures}{[Link]}
+\\
+Certificate 3: Front End Libraries
+\href{https://www.freecodecamp.org/certification/fcc7d8027bd-7ee4-4ec3-816b-87c5087dab3c/front-end-libraries}{[Link]}
 }
 
-\EducationEntry{Deep Learning Nanodegree}{01/2017 -- 06/2017}
-{Udacity, www.udacity.com} {Assigment 1: Vanilla Neural Network from scratch\\
+\EducationEntry{Udacity Deep Learning Nanodegree}{01/2017 -- 06/2017}
+{\href{https://www.udacity.com}{www.udacity.com}} {Assigment 1: Vanilla Neural Network from scratch\\
  Assigment 2: Image Classification by Convolutional Neural Network\\
  Assigment 3: TV script generation by Recurrent Neural Network\\
  Assigment 4: Language-translation by Recurrent Neural Network\\
  Assigment 5: Face image generation by Generative Adversarial Networks \\
- Source-code: https://github.com/NagyAttila/Udacity\_DLND\_Assigments
- %Syllabus: https://www.udacity.com/course/deep-learning-nanodegree--nd101
- }
+ \href{https://github.com/NagyAttila/Udacity_DLND_Assigments } {[Link To Source Code]}
+ \href{https://github.com/NagyAttila/CV/blob/59391275197eb3badbd4f8f62faa413d1bc8eb0d/certificates/2017_Udacity_DLND.pdf} {[Link To Certificate]}
+}
 
 \EducationEntry{MSc. Computer Science}{09/2012 -- 04/2014}
-  {Chalmers University of Technology, Sweden}{Specialization: Distributed Systems and Networks\\
+  {Gothenburg University, Sweden}{Specialization: Distributed Systems and Networks\\
   Thesis' Title: Energy Efficient, High-speed Communication in Wireless Sensor Networks\\
   Thesis' Keywords: Opportunistic Routing, Bulk-transfer, TinyOS, nesC\\
   Student Project: Carolo Cup, Germany, self-driving miniature cars, team leader\\
-  Research Project: Power consumtion disaggregation and clsassification with SVM}
+  Research Project: Power consumtion disaggregation and clsassification with SVM \\
+ \href{https://github.com/NagyAttila/CV/blob/59391275197eb3badbd4f8f62faa413d1bc8eb0d/certificates/2014_MSC.zip}
+ {[Link To Diploma]}
+}
+
 
 \EducationEntry{ERASMUS Scholarship}{09/2008 -- 01/2009}
 {University of Applied Sciences Ravensburg-Weingarten, Germany}
