add content to freeCodeCamp

--- a/CV_Attila_Nagy.tex
+++ b/CV_Attila_Nagy.tex
@@ -187,6 +187,8 @@ Certificate 2: JavaScript Algorithms and Data Structures
 \\
 Certificate 3: Front End Libraries
 \href{https://www.freecodecamp.org/certification/fcc7d8027bd-7ee4-4ec3-816b-87c5087dab3c/front-end-libraries}{[Link]}
+\\
+Content: React, Redux, Boostrap, jQuery, CSS, SASS, AJAX, JavaScript
 }
 
 \EducationEntry{Udacity Deep Learning Nanodegree}{01/2017 -- 06/2017}
